--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -14,12 +14,12 @@ description='''elementalcraft'''
     ordering="NONE"
     side="BOTH"
 
-[[dependencies.elementalcraft]]
-    modId="curios"
-    mandatory=true
-    versionRange="[FORGE-1.15.2-2.0,)"
-    ordering="AFTER"
-    side="BOTH"
+#[[dependencies.elementalcraft]]
+#    modId="curios"
+#    mandatory=true
+#    versionRange="[FORGE-1.15.2-2.0,)"
+#    ordering="AFTER"
+#    side="BOTH"
 
 [[dependencies.elementalcraft]]
     modId="jei"
