--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,24 @@ buildscript {
         maven { url = 'https://files.minecraftforge.net/maven' }
         jcenter()
         mavenCentral()
+        maven { url = 'https://dist.creeper.host/Sponge/maven' }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
+        classpath group: 'org.spongepowered', name: 'mixingradle', version: '0.7-SNAPSHOT'
     }
 }
 apply plugin: 'net.minecraftforge.gradle'
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
+apply plugin: 'org.spongepowered.mixin'
 
-version = '2.0.6-1.16.1'
+mixin {
+    add sourceSets.main, "elementalcraft.refmap.json"
+}
+
+version = '2.1.0-1.16.2'
 group = 'sirttas.elementalcraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'elementalcraft'
 
@@ -25,7 +32,7 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'snapshot', version: '20200514-1.16'
+    mappings channel: 'snapshot', version: '20200723-1.16.1'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
     
     accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
@@ -34,6 +41,8 @@ minecraft {
     // These can be tweaked, removed, or duplicated as needed.
     runs {
         client {
+        properties 'fml.earlyprogresswindow': 'false'
+        properties 'mixin.env.disableRefMap': 'true'
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
@@ -50,6 +59,7 @@ minecraft {
         }
 
         server {
+        	properties 'mixin.env.disableRefMap': 'true'
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
@@ -67,6 +77,7 @@ minecraft {
 
         data {
             properties 'fml.earlyprogresswindow': 'false'
+            properties 'mixin.env.disableRefMap': 'true'
             workingDirectory project.file('run')
 
             // Recommended logging data for a userdev environment
@@ -108,13 +119,15 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.1-32.0.98'
+    minecraft 'net.minecraftforge:forge:1.16.2-33.0.20'
     
-    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16-39:api")
-    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16-39")
+    compile 'org.spongepowered:mixin:0.8'
     
-    compileOnly fg.deobf("mezz.jei:jei-1.16.1:7.0.0.2:api")
-    runtimeOnly fg.deobf("mezz.jei:jei-1.16.1:7.0.0.2")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:1.16-42:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:1.16-42")
+    
+    compileOnly fg.deobf("mezz.jei:jei-1.16.2:7.1.3.19:api")
+    implementation fg.deobf("mezz.jei:jei-1.16.2:7.1.3.19")
     
     // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
 	//compile "org.apache.commons:commons-collections4:4.0"
@@ -131,7 +144,8 @@ jar {
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"elementalcraft",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
+            "MixinConnector": "sirttas.elementalcraft.mixin.Connector"
         ])
     }
 }
