--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,5 +1,6 @@
 modLoader="javafml"
-loaderVersion="[31,)" 
+loaderVersion="[33,)" 
+license="LGPL 2.1"
 
 [[mods]] 
 modId="elementalcraft"
@@ -10,20 +11,20 @@ description='''elementalcraft'''
 [[dependencies.elementalcraft]]
     modId="forge"
     mandatory=true
-    versionRange="[32.0.98,)"
+    versionRange="[33.0.20,)"
     ordering="NONE"
     side="BOTH"
 
 [[dependencies.elementalcraft]]
     modId="jei"
     mandatory=true
-    versionRange="[FORGE-1.16.1-7.0,)"
+    versionRange="[FORGE-1.16.1-7.1,)"
     ordering="AFTER"
     side="BOTH"
 
 [[dependencies.elementalcraft]]
     modId="patchouli"
     mandatory=true
-    versionRange="[1.16-39,)"
+    versionRange="[1.16-42,)"
     ordering="AFTER"
     side="BOTH"
