--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.item.crafting.RecipeManager func_215366_a(Lnet/minecraft/item/crafting/IRecipeType;)Ljava/util/Map; # getRecipes
+public net.minecraft.item.crafting.RecipeManager field_199522_d # recipes
 public net.minecraft.entity.passive.BeeEntity func_226447_r_(Z)V # setHasNectar
