--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ mixin {
     add sourceSets.main, "elementalcraft.refmap.json"
 }
 
-version = '2.1.0-1.16.2'
+version = '2.1.1-1.16.2'
 group = 'sirttas.elementalcraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'elementalcraft'
 
@@ -119,7 +119,7 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.16.2-33.0.20'
+    minecraft 'net.minecraftforge:forge:1.16.2-33.0.22'
     
     compile 'org.spongepowered:mixin:0.8'
     
@@ -140,7 +140,7 @@ jar {
         attributes([
             "Specification-Title": "elementalcraft",
             "Specification-Vendor": "elementalcraft",
-            "Specification-Version": "2", // We are version 1 of ourselves
+            "Specification-Version": "2",
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"elementalcraft",
