--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,4 +1,5 @@
 public net.minecraft.item.crafting.RecipeManager func_215366_a(Lnet/minecraft/item/crafting/IRecipeType;)Ljava/util/Map; # getRecipes
+public net.minecraft.item.crafting.RecipeManager field_199522_d # recipes
 public net.minecraft.block.DoublePlantBlock func_241471_b_(Lnet/minecraft/world/World;Lnet/minecraft/util/math/BlockPos;Lnet/minecraft/block/BlockState;Lnet/minecraft/entity/player/PlayerEntity;)V
 public net.minecraft.loot.functions.LootFunctionManager func_237451_a_(Ljava/lang/String;Lnet/minecraft/loot/ILootSerializer;)Lnet/minecraft/loot/LootFunctionType; # registerFunction
 public net.minecraft.entity.passive.BeeEntity func_226447_r_(Z)V # setHasNectar
