--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -25,7 +25,7 @@ description='''ElementalCraft is a magic mod based around the 4 elements: fire, 
 
 [[dependencies.elementalcraft]]
     modId="patchouli"
-    mandatory=true
+    mandatory=false
     versionRange="[1.15.2-1.2,)"
     ordering="AFTER"
     side="BOTH"
