--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ mixin {
     add sourceSets.main, "elementalcraft.refmap.json"
 }
 
-version = '1.16.2-2.2.14'
+version = '1.16.2-2.2.15'
 group = 'sirttas.elementalcraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'elementalcraft'
 
@@ -145,7 +145,7 @@ jar {
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"elementalcraft",
             "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-            "MixinConnector": "sirttas.elementalcraft.mixin.Connector"
+            "MixinConfigs": "elementalcraft.mixins.json"
         ])
     }
 }
