--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,7 +1,8 @@
 public net.minecraft.item.crafting.RecipeManager func_215366_a(Lnet/minecraft/item/crafting/IRecipeType;)Ljava/util/Map; # getRecipes
 public net.minecraft.item.crafting.RecipeManager field_199522_d # recipes
 public net.minecraft.entity.passive.BeeEntity func_226447_r_(Z)V # setHasNectar
-public net.minecraft.item.Item field_111210_e # ATTACK_DAMAGE_MODIFIER
-public net.minecraft.item.Item field_185050_h # ATTACK_SPEED_MODIFIER
 public net.minecraft.entity.player.PlayerInventory func_184431_b(Lnet/minecraft/item/ItemStack;Lnet/minecraft/item/ItemStack;)Z # stackEqualExact
 public net.minecraft.entity.LivingEntity func_70669_a(Lnet/minecraft/item/ItemStack;)V # renderBrokenItemStack
+public net.minecraft.entity.LivingEntity func_70688_c(Lnet/minecraft/potion/EffectInstance;)V # onFinishedPotionEffect
+public net.minecraft.entity.player.ServerPlayerEntity func_70688_c(Lnet/minecraft/potion/EffectInstance;)V # onFinishedPotionEffect
+public net.minecraft.entity.LivingEntity func_175136_bO()V # markPotionsDirty
