--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -18,7 +18,7 @@ description='''ElementalCraft is a magic mod based around the 4 elements: fire, 
 
 [[dependencies.elementalcraft]]
     modId="jei"
-    mandatory=true
+    mandatory=false
     versionRange="[FORGE-1.16.1-7.3,)"
     ordering="AFTER"
     side="BOTH"
