--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,3 +8,4 @@ public net.minecraft.entity.LivingEntity func_70669_a(Lnet/minecraft/item/ItemSt
 public net.minecraft.entity.LivingEntity func_70688_c(Lnet/minecraft/potion/EffectInstance;)V # onFinishedPotionEffect
 public net.minecraft.entity.player.ServerPlayerEntity func_70688_c(Lnet/minecraft/potion/EffectInstance;)V # onFinishedPotionEffect
 public net.minecraft.entity.LivingEntity func_175136_bO()V # markPotionsDirty
+public net.minecraft.resources.SimpleReloadableResourceManager field_199015_d # reloadListeners
