--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,14 @@
+minecraft_version=1.16.3
 loader_version=34.1
 mappings_version=20201028-1.16.3
 forge_version=1.16.3-34.1.25
 mixins_version=0.8.2
 
-elementalcraft_version=1.16.3-2.4.11
+elementalcraft_version=1.16.3-2.4.12
 
+# mod dependencies
 jei_version=7.6.0.49
 patchouli_version=1.16.2-47
+
+# mod interactions
 mekanism_version=1.16.3-10.0.15.441
