--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build
 on:
   push:
     branches:
-      - 1.16
+      - '1.16'
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -12,11 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: Set up JDK 8
-        uses: actions/setup-java@v1
+          fetch-depth: 0 
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 8
+          distribution: 'adopt'
+          java-version: 11
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
@@ -33,4 +34,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew build sonarqube --info
+        run: ./gradlew build sonarqube --info --stacktrace
+
