--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - '1.16'
+    tags:
+      - '*'
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -35,4 +37,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build sonarqube --info --stacktrace
+      - name: Publish
+        env:
+          MODMAVEN_USER: ${{ secrets.MODMAVEN_USER }}
+          MODMAVEN_PASSWORD: ${{ secrets.MODMAVEN_PASSWORD }}
+          CURSEFORGE_KEY: ${{ secrets.CURSEFORGE_KEY }}
+        if: startsWith(github.ref, 'refs/tags/')
+        run: ./gradlew publish curseforge --info --stacktrace
 
