--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,9 @@ mappings_version=1.16.5
 forge_version=1.16.5-36.0.17
 mixins_version=0.8.2
 
-elementalcraft_version=1.16.5-2.7.4
+curse_release_type=release
+
+elementalcraft_version=1.16.5-2.7.5
 
 # mod dependencies
 jei_version=1.16.5:7.7.0.106
