--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,9 @@ mappings_version=1.17.1
 forge_version=1.17.1-37.0.25
 mixins_version=0.8.2
 
-elementalcraft_version=1.17.1-3.0.2
+curse_release_type=alpha
+
+elementalcraft_version=1.17.1-3.0.3
 
 # mod dependencies
 jei_version=1.16.5:7.7.0.106
