--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,8 @@
 name: Build
 on:
   push:
-    tags:
-      - '*'
+    branches:
+      - '1.16'
   pull_request:
     types: [opened, synchronize, reopened]
 jobs:
@@ -35,11 +35,3 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build sonarqube --info --stacktrace
-      - name: Publish
-        env:
-          MODMAVEN_USER: ${{ secrets.MODMAVEN_USER }}
-          MODMAVEN_PASSWORD: ${{ secrets.MODMAVEN_PASSWORD }}
-          CURSEFORGE_KEY: ${{ secrets.CURSEFORGE_KEY }}
-        if: startsWith(github.ref, 'refs/tags/')
-        run: ./gradlew publish curseforge --info --stacktrace
-
