--- a/build.gradle
+++ b/build.gradle
@@ -174,8 +174,9 @@ jar {
             "Implementation-Title": project.name,
             "Implementation-Version": "${version}",
             "Implementation-Vendor" :"elementalcraft",
-            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-            "MixinConfigs": "elementalcraft.mixins.json"
+            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+
+
         ])
     }
     afterEvaluate { finalizedBy('reobfJar') }
