--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 minecraft_version=1.17.1
-mappings_channel=official
-mappings_version=1.17.1
-forge_version=1.17.1-37.0.32
-mixins_version=0.8.2
+mappings_channel=parchment
+mappings_version=2021.09.05-1.17.1
+forge_version=1.17.1-37.0.53
+mixins_version=0.8.4-SNAPSHOT
 
 curse_release_type=alpha
 
-elementalcraft_version=1.17.1-3.1.3
+elementalcraft_version=1.17.1-3.1.4
 
 # mod dependencies
-jei_version=1.16.5:7.7.0.106
+jei_version=1.17.1:8.0.0.16
 patchouli_version=1.16.4-50
-dpanvil_version=1.17.1-2.0.2
+dpanvil_version=1.17.1-2.0.3
 
 # mod interactions
 mekanism_version=1.16.3-10.0.15.441
