--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,11 @@ mixin {
     add sourceSets.main, "elementalcraft.refmap.json"
 }
 
-version = project.hasProperty('tag_version') ? "${minecraft_version}-" + project.findProperty("tag_version") : "${elementalcraft_version}"
+version = project.hasProperty('tag_version') ? "${minecraft_version}-${tag_version}" : "${elementalcraft_version}"
 group = 'sirttas.elementalcraft'
 archivesBaseName = 'elementalcraft'
+
+println('Elemental Craft: ' + project.version)
 
 java.toolchain.languageVersion = JavaLanguageVersion.of(8)
 
