--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ mappings_version=2021.10.10-1.17.1
 forge_version=1.17.1-37.0.84
 mixins_version=0.8.4
 
-curse_release_type=alpha
+curse_release_type=beta
 
 elementalcraft_version=1.17.1-3.2.0
 
