--- a/gradle.properties
+++ b/gradle.properties
@@ -8,12 +8,12 @@ mixins_version=0.8.5
 
 curse_release_type=alpha
 
-elementalcraft_version=1.18-4.0.0
+elementalcraft_version=1.18-4.0.0c
 
 # mod dependencies
 jei_version=1.17.1:8.0.0.16
 patchouli_version=1.16.4-50
-dpanvil_version=1.18-3.0.0
+dpanvil_version=[1.18-3.0.0,1.18-3.1.0)
 
 # mod interactions
 mekanism_version=1.16.3-10.0.15.441
