--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ mixins_version=0.8.5
 
 curse_release_type=alpha
 
-elementalcraft_version=1.18-4.0.0d
+elementalcraft_version=1.18-4.0.0e
 
 # mod dependencies
 jei_version=1.17.1:8.0.0.16
