--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ minecraft_version=1.18
 ##mappings_version=2021.10.10-1.17.1
 mappings_channel=official
 mappings_version=1.18
-forge_version=1.18-38.0.8
+forge_version=1.18-38.0.14
 mixins_version=0.8.5
 
 curse_release_type=alpha
@@ -11,9 +11,9 @@ curse_release_type=alpha
 elementalcraft_version=1.18-4.0.1
 
 # mod dependencies
-jei_version=1.17.1:8.0.0.16
+jei_version=1.18:9.0.0.40
 patchouli_version=1.16.4-50
-dpanvil_version=1.18-3.0.0b
+dpanvil_version=1.18-3.1.0
 
 # mod interactions
 mekanism_version=1.16.3-10.0.15.441
