--- a/build.gradle
+++ b/build.gradle
@@ -160,13 +160,12 @@ minecraft {
 
 repositories {
     mavenCentral()
-    flatDir { dirs 'libs', '../DPAnvil/build/libs' }
+    flatDir { dirs 'libs', '../libs', '../DPAnvil/build/libs' }
     maven { url "https://maven.theillusivec4.top/" }
     maven { url "https://dvs1.progwml6.com/files/maven/" }
   	maven { url "https://modmaven.dev/" }
   	maven { url "https://maven.blamejared.com" }
-  	maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
-  	
+  	maven { url "https://repo.spongepowered.org/repository/maven-public/" }
 }
 
 dependencies {
@@ -200,6 +199,10 @@ dependencies {
     datagenImplementation sourceSets.api.output
     datagenImplementation sourceSets.main.output
     //datagenImplementation fg.deobf("mekanism:Mekanism:${mekanism_version}:tools")
+    try {
+        datagenImplementation fg.deobf("net.silentchaos512:silent-gear:${silentgear_version}")
+        datagenImplementation fg.deobf("net.silentchaos512:silent-lib:${silentlib_version}")
+    } catch (e) { }
 }
 
 jar {
