--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ mixins_version=0.8.5
 
 curse_release_type=alpha
 
-elementalcraft_version=1.18-4.0.3
+elementalcraft_version=1.18-4.0.4
 
 # mod dependencies
 jei_version=1.18:9.0.0.40
@@ -17,3 +17,7 @@ dpanvil_version=1.18-3.1.0
 
 # mod interactions
 mekanism_version=1.16.3-10.0.15.441
+
+# datagen dependencies
+silentgear_version=1.18-2.8.0
+silentlib_version=1.18-6.0.0
