--- a/build.gradle
+++ b/build.gradle
@@ -202,8 +202,8 @@ dependencies {
         runtimeOnly fg.deobf("sirttas.dpanvil:DPAnvil:${dpanvil_version}")
     }
 
-    //compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
-    //runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
+    compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
+    runtimeOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}")
     
     implementation fg.deobf("mezz.jei:jei-${jei_version}")
     
@@ -339,7 +339,6 @@ if (System.getenv("CURSEFORGE_KEY") != null || project.hasProperty('curseforge_k
 				relations {
 					requiredDependency 'datapack-anvil'
 					requiredDependency 'jei'
-//					requiredDependency 'patchouli'
 	        		incompatible 'performant'
 				}
 			}
