--- a/gradle.properties
+++ b/gradle.properties
@@ -4,10 +4,10 @@ mappings_version=2021.12.13-nightly-SNAPSHOT-1.18.1
 forge_version=1.18.1-39.0.5
 mixins_version=0.8.5
 
-sonar_version=3.3
+sonar_version=3.3+
 curse_release_type=alpha
 
-elementalcraft_version=1.18-1-4.1.1
+elementalcraft_version=1.18-1-4.1.2
 
 # mod dependencies
 jei_version=1.18.1:9.1.0.46
