--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ forge_version=1.18.1-39.0.5
 mixins_version=0.8.5
 
 sonar_version=3.3+
-curse_release_type=alpha
+curse_release_type=beta
 
-elementalcraft_version=1.18-1-4.1.3
+elementalcraft_version=1.18-1-4.1.4
 
 # mod dependencies
 jei_version=1.18.1:9.1.0.46
